[gd_scene load_steps=4 format=3 uid="uid://c4kfqlx172etq"]

[ext_resource type="Script" path="res://script/menu_inicial.gd" id="1_q3aub"]
[ext_resource type="Texture2D" uid="uid://0ll586uvek3n" path="res://assets/startScreen.png" id="2_0by0v"]

[sub_resource type="Theme" id="Theme_6qgel"]

[node name="Menu_inicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3aub")

[node name="background" type="TextureRect" parent="."]
self_modulate = Color(0.392157, 0.392157, 0.392157, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0by0v")

[node name="labels" type="Node2D" parent="."]

[node name="credits" type="Label" parent="labels"]
offset_left = 16.0
offset_top = 624.0
offset_right = 151.0
offset_bottom = 646.0
theme_override_font_sizes/font_size = 7
text = "by Felipe Marques and Kawã Sousa"

[node name="Label" type="Label" parent="labels"]
offset_left = 527.0
offset_top = 311.0
offset_right = 729.0
offset_bottom = 333.0
text = "sobreviva à Game Jam!"

[node name="Label3" type="Label" parent="labels"]
offset_left = 451.0
offset_top = 206.0
offset_right = 529.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 100
text = "y"

[node name="Label4" type="Label" parent="labels"]
offset_left = 529.0
offset_top = 221.0
offset_right = 865.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 80
text = "Jammers"

[node name="Label5" type="Label" parent="labels"]
offset_left = 252.0
offset_top = 214.0
offset_right = 876.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 85
text = "Scar "

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 62.0
offset_right = 52.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="play_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_6qgel")
text = "Novo jogo "

[node name="days_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Opções"

[connection signal="pressed" from="VBoxContainer2/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/days_button" to="." method="_on_days_button_pressed"]
